# mastodon-tools

./: LICENSE  add-blocklist.sh  example-blocklist.csv  index.html  mass-add-to-blocklist.html  sakura.css
api/: Cargo.toml  mass_instance_block.rs
