[package]
name = "index"
version = "1.0.0"
authors = [ "Bram Dingelstad <bram+mastodontools@dingelstad.works>" ]
edition = "2018"

[dependencies]
regex = "1.7.0"
vercel_lambda = "*"
csv = "1.1.6"
serde_derive = "1.0.147"
serde = "1.0.147"

[dependencies.reqwest]
version = "0.11.12"
features = [ "blocking" ]

[lib]
name = "mass_instance_block"
path = "mass_instance_block.rs"

[[bin]]
name = "mass_instance_block"
path = "/Users/bram/Development/masto-scripts/api/mass_instance_block.rs"
